# claude-code-book

./: .gitignore  00-前言.md  Cargo.toml  README.md
en/: README.md
en/Appendices/: E-Engineering-Checklists.md
en/Part-1-Foundations/: 00-Prerequisites.md  01-The-New-Paradigm-of-Agent-Programming.md  02-The-Dialog-Loop-Heartbeat-of-an-Agent.md  03-The-Tool-System-Agent-Hands.md  04-The-Permission-Pipeline-Agent-Guardrails.md
en/Part-2-Core-Systems/: 07-Context-Management-Agent-Working-Memory.md  08-Error-Recovery-Agent-Resilience.md  09-The-Hook-System-Agent-Lifecycle-Extension-Points.md
en/Part-3-Advanced-Patterns/: 10-Sub-Agents-and-the-Fork-Pattern.md  11-The-Coordinator-Pattern-Multi-Agent-Orchestration.md  12-The-Skill-System-and-Plugin-Architecture.md  13-MCP-Integration-and-External-Protocols.md  14-Claude-Code-and-Codex-Architecture-Comparison.md
en/Part-4-Engineering-Practice/: 15-Streaming-Architecture-and-Performance-Optimization.md  16-Plan-Mode-and-Structured-Workflows.md  17-Building-Your-Own-Agent-Harness.md  18-Team-Adoption-From-Tools-to-Institutions.md  19-Ten-Principles-of-Agent-Harness.md
tutorials/: Cargo.toml  README.md
tutorials/ch01_llm_client/src/: main.rs
tutorials/ch02_agent_loop/src/: main.rs
tutorials/ch03_tool_system/src/: main.rs
tutorials/ch04_permissions/: Cargo.toml
tutorials/ch04_permissions/src/: main.rs
tutorials/ch05_context/: Cargo.toml
tutorials/ch05_context/src/: main.rs
tutorials/ch07_streaming/: Cargo.toml
tutorials/ch08_hooks/src/: main.rs
tutorials/ch09_mcp/src/: main.rs
tutorials/ch10_multi_agent/src/: main.rs
tutorials/ch11_mini_claude/src/: main.rs
tutorials/common/: Cargo.toml
tutorials/common/src/: lib.rs  llm.rs  tools.rs  types.rs
第一部分-基础篇/: 00-预备知识.md  01-智能体编程的新范式.md  02-对话循环-Agent的心跳.md  03-工具系统-Agent的双手.md  04-权限管线-Agent的护栏.md
第一部分-基础篇/00-预备知识/code/: Cargo.toml
第一部分-基础篇/02-对话循环-Agent的心跳/code/: Cargo.toml
第一部分-基础篇/02-对话循环-Agent的心跳/code/src/: main.rs
第一部分-基础篇/03-工具系统-Agent的双手/code/: Cargo.toml
第一部分-基础篇/04-权限管线-Agent的护栏/code/src/: main.rs
第一部分-基础篇/common/src/: tools.rs  types.rs
第三部分-高级模式篇/: 10-子智能体与Fork模式.md  11-协调器模式-多智能体编排.md  12-技能系统与插件架构.md  13-MCP集成与外部协议.md  14-Claude-Code与Codex的架构对比.md
第三部分-高级模式篇/10-子智能体与Fork模式/code/: Cargo.toml
第三部分-高级模式篇/13-MCP集成与外部协议/code/: Cargo.toml
第二部分-核心系统篇/: 05-设置与配置-Agent的基因.md  06-记忆系统-Agent的长期记忆.md  07-上下文管理-Agent的工作记忆.md  08-错误恢复-Agent的韧性.md  09-钩子系统-Agent的生命周期扩展点.md
第二部分-核心系统篇/06-记忆系统-Agent的长期记忆/code/: Cargo.toml
第二部分-核心系统篇/06-记忆系统-Agent的长期记忆/code/src/: main.rs
第二部分-核心系统篇/07-上下文管理-Agent的工作记忆/code/src/: main.rs
第二部分-核心系统篇/09-钩子系统-Agent的生命周期扩展点/code/: Cargo.toml
第四部分-工程实践篇/: 15-流式架构与性能优化.md  16-Plan模式与结构化工作流.md  17-构建你自己的Agent-Harness.md  18-团队采纳-从工具到制度.md  19-Agent-Harness十大原则.md
第四部分-工程实践篇/17-构建你自己的Agent-Harness/code/: Cargo.toml
附录/: D-术语表.md  E-工程检查清单.md
(+2 files in other folders)
