[workspace]
members = [
    "common",
    "ch01_llm_client",
    "ch02_agent_loop",
    "ch03_tool_system",
    "ch04_permissions",
    "ch05_context",
    "ch06_memory",
    "ch07_streaming",
    "ch08_hooks",
    "ch09_mcp",
    "ch10_multi_agent",
    "ch11_mini_claude",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
mini-claude-common = { path = "common" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
eventsource-stream = "0.2"
futures = "0.3"
tokio-stream = "0.1"
clap = { version = "4", features = ["derive"] }
regex = "1"
chrono = "0.4"
async-trait = "0.1"
