[package]
name = "mini-claude-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
glob = "0.3"
reqwest = { workspace = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }
