[package]
name = "ch09-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
mini-claude-common = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }
